<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <include
        android:layout_width="wrap_content"
        android:layout_height="@dimen/global_status_bar_height"
        android:layout_gravity="bottom|right"
        layout="@layout/layout_operation_tip" />

    <com.softwin.gbox.home.MyWorkspaceNew
        android:id="@+id/launcher_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:focusableInTouchMode="false" />

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="@dimen/startbar_layout_padding_right"
        android:layout_marginTop="@dimen/startbar_layout_padding_top"
        layout="@layout/layout_state_bar_add_power" />

    <RadioGroup
        android:id="@+id/navigation_radiogroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/tab_margin_left"
        android:layout_marginTop="@dimen/tab_margin_top"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:orientation="horizontal" >
    <RadioButton
        android:id="@+id/navigation_gamecenter"
        style="@style/NavigationItem"
        android:nextFocusLeft="@id/navigation_gamecenter"
        android:text="@string/tablet_home_tab_roms"/>

    <RadioButton
        android:id="@+id/navigation_mygame"
        style="@style/NavigationItem"
        android:text="@string/tablet_home_tab_android" />

    <RadioButton
        android:id="@+id/navigation_myapp"
        style="@style/NavigationItem"
        android:text="@string/tablet_home_tab_apps"/>

    <RadioButton
        android:id="@+id/navigation_setting"
        style="@style/NavigationItem"
        android:nextFocusRight="@id/navigation_setting"
        android:text="@string/atet_launcher_home_tab_settings" />

    </RadioGroup>

</merge>